iptables-rules
# Generated by iptables-save v1.8.4 on Thu Jul 28 04:55:49 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [182:13074]
:POSTROUTING ACCEPT [182:13074]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.20.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.20.0.2/32 -d 172.20.0.2/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Thu Jul 28 04:55:49 2022
# Generated by iptables-save v1.8.4 on Thu Jul 28 04:55:49 2022
*filter
:INPUT ACCEPT [1495:112457]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1510:106943]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i br0 -j ACCEPT
-A FORWARD -o br0 -j ACCEPT
-A FORWARD -i bremu -j ACCEPT
-A FORWARD -o bremu -j ACCEPT
-A FORWARD -i ogstun -j ACCEPT
-A FORWARD -o ogstun -j ACCEPT
-A FORWARD -i p1net -j ACCEPT
-A FORWARD -i p2net -j ACCEPT
-A FORWARD -i p2netbr -j ACCEPT
-A FORWARD -i p1netbr -j ACCEPT
-A FORWARD -o p1netbr -j ACCEPT
-A FORWARD -o p2netbr -j ACCEPT
-A FORWARD -o p2net -j ACCEPT
-A FORWARD -o p1net -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Thu Jul 28 04:55:49 2022
